# chess-next-move-predictor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/core/: board.hpp  move_gen.hpp
include/engine/: evaluation.hpp  search.hpp
include/gui/: application.hpp  board_renderer.hpp  engine_panel.hpp
src/: main.cpp
src/core/: board.cpp
src/engine/: evaluation.cpp  search.cpp
src/gui/: application.cpp  board_renderer.cpp
